[package]
name = "hbs"
authors = [ "Alyaman Maasarani <alyaman.maasarani@gmail.com>" ]
license = "GPL3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
